[gd_scene load_steps=8 format=2]

[ext_resource path="res://OneWayTests/Block Climb Test.gd" type="Script" id=1]
[ext_resource path="res://2D Assets/Ice Physics Material.tres" type="PhysicsMaterial" id=2]
[ext_resource path="res://2D Assets/StaticBody Floor.tscn" type="PackedScene" id=3]
[ext_resource path="res://2D Assets/Target.tscn" type="PackedScene" id=4]
[ext_resource path="res://2D Assets/RigidBody Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://2D Assets/One-Way Blocks/StaticBody Big Narrow Block.tscn" type="PackedScene" id=6]
[ext_resource path="res://2D Assets/KinematicBody Player.tscn" type="PackedScene" id=7]

[node name="Block Climb Test" type="Node2D"]
script = ExtResource( 1 )

[node name="Floor" parent="." instance=ExtResource( 3 )]
position = Vector2( 512, 510 )
physics_material_override = ExtResource( 2 )

[node name="Block1" parent="." instance=ExtResource( 6 )]
position = Vector2( 362, 200 )

[node name="Block2" parent="." instance=ExtResource( 6 )]
position = Vector2( 462, 200 )

[node name="Block3" parent="." instance=ExtResource( 6 )]
position = Vector2( 562, 200 )

[node name="Block4" parent="." instance=ExtResource( 6 )]
position = Vector2( 662, 200 )

[node name="Block5" parent="." instance=ExtResource( 6 )]
position = Vector2( 362, 400 )

[node name="Block6" parent="." instance=ExtResource( 6 )]
position = Vector2( 462, 400 )

[node name="Block7" parent="." instance=ExtResource( 6 )]
position = Vector2( 562, 400 )

[node name="Block8" parent="." instance=ExtResource( 6 )]
position = Vector2( 662, 400 )

[node name="Rigid Goal" parent="." instance=ExtResource( 4 )]
position = Vector2( 992, 468 )
colour = Color( 0, 0.74902, 0, 1 )
player_path = NodePath("../Rigid Player")

[node name="Label" type="Label" parent="Rigid Goal"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -50.0
margin_right = 32.0
margin_bottom = -32.0
text = "RigidBody Goal"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Kinematic Goal" parent="." instance=ExtResource( 4 )]
position = Vector2( 32, 468 )
colour = Color( 0, 0.75, 0, 1 )
player_path = NodePath("../Kinematic Player")

[node name="Label" type="Label" parent="Kinematic Goal"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -50.0
margin_right = 150.0
margin_bottom = -32.0
text = "KinematicBody Goal"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Kinematic Trap" parent="." instance=ExtResource( 4 )]
position = Vector2( 206, 468 )
colour = Color( 0.75, 0, 0, 1 )
player_path = NodePath("../Kinematic Player")

[node name="Label" type="Label" parent="Kinematic Trap"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -50.0
margin_right = 32.0
margin_bottom = -32.0
text = "Trap"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rigid Trap" parent="." instance=ExtResource( 4 )]
position = Vector2( 818, 468 )
colour = Color( 0.74902, 0, 0, 1 )
player_path = NodePath("../Rigid Player")

[node name="Label" type="Label" parent="Rigid Trap"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -50.0
margin_right = 32.0
margin_bottom = -32.0
text = "Trap"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rigid Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 270, 468 )
linear_velocity = Vector2( 115, -240 )

[node name="Kinematic Player" parent="." instance=ExtResource( 7 )]
position = Vector2( 754, 468 )
linear_velocity = Vector2( -115, -240 )

[node name="Test Outcome" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 412.0
margin_top = 30.0
margin_right = 612.0
margin_bottom = 45.0
text = "Testing ..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Complete" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = 412.0
margin_top = 45.0
margin_right = 612.0
margin_bottom = 60.0
text = "Press Space/Enter to repeat"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
autostart = true
[connection signal="target_reached" from="Rigid Goal" to="." method="_on_goal_reached"]
[connection signal="target_reached" from="Kinematic Goal" to="." method="_on_goal_reached"]
[connection signal="target_reached" from="Kinematic Trap" to="." method="_on_trap_reached"]
[connection signal="target_reached" from="Rigid Trap" to="." method="_on_trap_reached"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
